--- a/thesis-work/thesis.tex
+++ b/thesis-work/thesis.tex
@@ -130,9 +130,9 @@
 %% *** Change this example to appropriate values. ***
 \degree{Master of Science}
 \department{Computer Science}
-\gradyear{2016}
-\author{Author Name}
-\title{Thesis Title}
+\gradyear{2021}
+\author{Peleg Kazaz}
+\title{Communication Complexity of Set Disjointness Over Product Distributions}
 
 %% *** NOTE ***
 %% Put here all other formatting commands that belong in the preamble.
