--- a/thesis-work/ut-thesis.cls
+++ b/thesis-work/ut-thesis.cls
@@ -337,7 +337,7 @@
    \begin{titlepage}
    \begin{large}
    \begin{center}
-   	  \includegraphics[scale=0.25]{img/TAU-Logo.jpg}\\
+      \includegraphics[scale=0.25]{img/TAU-Logo.jpg}\\
       \large
       Tel Aviv University\\
       Raymond and Beverly Sackler Faculty of Exact Sciences\\
@@ -352,7 +352,7 @@
       \vfill
       \Large
       under the supervision of \\
-      Prof. Boaty McBoatface\\
+      Prof. Rotem Oshman\\
 %%%%
 %% Uncomment for a second thesis supervisor:
 %%
